--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     </head>
     <body>
+
+        <!-- Header -->
         <header>
             <h1>Lucas Zimmerman</h1>
             <nav>
@@ -23,14 +25,47 @@
                 </ul>
             </nav>
         </header>
-        <section id="about-me">
-            <h2>About Me</h2>
+
+        <!-- hero -->
+        <section class="hero">
+            <h2>Cool subtitle here!</h2>
         </section>
-        <section id="my-work">
-            <h2>My Work</h2>
-        </section>
-        <section id="contact-me">
-            <h2>Contact Me</h2>
+
+        <section class="content">
+            <!-- About Me -->
+            <section id="about-me">
+                <h2>About Me</h2>
+                <article>
+                    <p>
+                    I am an experienced IT specialist looking to make a jump into Web Development. See "My Work" section to view my capabilities. As you will see I have experience in UI/UX design
+                    at the moment. I hope to have examples of javascript, API, and Database build out in the near future. In my personal life: I am married with children, love sports , and music.  
+                    </p>
+                </article>
+            </section>
+
+            <!-- My Work -->
+            <section id="my-work">
+                <h2>My Work</h2>
+                <article>MERN Stack/Something1</article>
+                <article>Node/loT</article>
+                <article>React/JavaScript/CSS</article>
+                <article>MERN Stack/Something2</article>
+                <article>HTML/CSS</article>
+                <article></article>
+            </section>
+
+            <!-- Contact Me -->
+            <section id="contact-me">
+                <h2>Contact Me</h2>
+                <article>
+                    <!-- Links-->
+                    <ul>
+                        <li><strong>Phone: <a href = "tel:3147992248" >314.799.2248</a></strong></li>
+                        <li><strong>Email: <a href = "mailto: zimmerman.lucas@hotmail.com">zimmerman.lucas@hotmail.com</a></strong></li>
+                        <li><strong>Github: <a  href = "https://github.com/dolomiteson">dolomiteson</a></strong></li>
+                    </ul>
+                </article>
+            </section>
         </section>
     </body>
 </html>
