--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
         <!-- Header -->
         <header>
-            <h1>Lucas Zimmerman</h1>
-            <nav>
+            <h1 class="header-child">Lucas Zimmerman</h1>
+            <nav class="header-child">
                 <ul>
                     <li>
                         <a href="#about-me">About Me</a>
