--- a/index.html
+++ b/index.html
@@ -24,47 +24,67 @@
                     </li>
                 </ul>
             </nav>
+            <img class="header-child" src="assets/images/avatar.png" alt="Profile Picture">
         </header>
 
         <!-- hero -->
         <section class="hero">
             <h2>Cool subtitle here!</h2>
         </section>
-
-        <section class="content">
-            <!-- About Me -->
-            <section id="about-me">
-                <h2>About Me</h2>
+        
+        <!-- About Me -->
+        <section id="about-me" class="content">
+            <h2>About<br>Me</h2>
+            <section>
                 <article>
                     <p>
-                    I am an experienced IT specialist looking to make a jump into Web Development. See "My Work" section to view my capabilities. As you will see I have experience in UI/UX design
-                    at the moment. I hope to have examples of javascript, API, and Database build out in the near future. In my personal life: I am married with children, love sports , and music.  
+                        I am an experienced IT specialist looking to make a jump into Web Development. See "My Work" section to view my capabilities. As you will see I have experience in UI/UX design
+                        at the moment. I hope to have examples of javascript, API, and Database build out in the near future. I have 6 years of experience in the IT field.
+                        I believe my experience in Quality Assurance with automation has given me the knowledge  to excel in development. 
+                    </p>
+                    <br/>
+                    <p>
+                        For my personal life, I am a family-man with a wife, 2 children, and a dog. I am a gamer who enjoys VR (Oculus Quest).
+                        I enjoy a wide range of music and television. I also love sports and am a passionate Liverpool fan. Finally I brew beer and enjoy the mix of culinary any scientific aspects
+                        that it entails.
                     </p>
                 </article>
             </section>
+        </section>
 
-            <!-- My Work -->
-            <section id="my-work">
-                <h2>My Work</h2>
-                <article>MERN Stack/Something1</article>
-                <article>Node/loT</article>
-                <article>React/JavaScript/CSS</article>
-                <article>MERN Stack/Something2</article>
-                <article>HTML/CSS</article>
-                <article></article>
+        <!-- My Work -->
+        <section id="my-work" class="content">
+            <h2>My<br>Work</h2>
+            <section>
+                <!-- Clickable Work Examples -->
+                <div class="work-main">
+                    <h3>MERN Stack/Something1</h3>
+                </div>
+                <div>
+                    <h3>Node/loT</h3>
+                </div>
+                <div>
+                    <h3>React/JavaScript/CSS</h3>
+                </div>
+                <div>
+                    <h3>MERN Stack/Something2</h3>
+                </div>
+                <div>
+                    <h3>HTML/CSS</h3>
+                </div>
             </section>
+        </section>
 
-            <!-- Contact Me -->
-            <section id="contact-me">
-                <h2>Contact Me</h2>
-                <article>
-                    <!-- Links-->
-                    <ul>
-                        <li><strong>Phone: <a href = "tel:3147992248" >314.799.2248</a></strong></li>
-                        <li><strong>Email: <a href = "mailto: zimmerman.lucas@hotmail.com">zimmerman.lucas@hotmail.com</a></strong></li>
-                        <li><strong>Github: <a  href = "https://github.com/dolomiteson">dolomiteson</a></strong></li>
-                    </ul>
-                </article>
+        <!-- Contact Me -->
+        <section id="contact-me" class="content">
+            <h2>Contact<br>Me</h2>
+            <section>
+                <!-- Links-->
+                <ul>
+                    <li><strong>Phone: <a href = "tel:3147992248" >314.799.2248</a></strong></li>
+                    <li><strong>Email: <a href = "mailto: zimmerman.lucas@hotmail.com">zimmerman.lucas@hotmail.com</a></strong></li>
+                    <li><strong>Github: <a  href = "https://github.com/dolomiteson">dolomiteson</a></strong></li>
+                </ul>
             </section>
         </section>
     </body>
