CSS changes to make it responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- hero -->
         <section class="hero">
-            <h2>Cool subtitle here!</h2>
+            <h2>Rad-Glasses Prefered!</h2>
         </section>
         
         <!-- About Me -->
@@ -55,21 +55,21 @@
         <!-- My Work -->
         <section id="my-work" class="content">
             <h2>My<br>Work</h2>
-            <section>
+            <section class="work-content">
                 <!-- Clickable Work Examples -->
                 <div class="work-main">
                     <h3>MERN Stack/Something1</h3>
                 </div>
-                <div>
+                <div class="work-other">
                     <h3>Node/loT</h3>
                 </div>
-                <div>
+                <div class="work-other">
                     <h3>React/JavaScript/CSS</h3>
                 </div>
-                <div>
+                <div class="work-other">
                     <h3>MERN Stack/Something2</h3>
                 </div>
-                <div>
+                <div class="work-other">
                     <h3>HTML/CSS</h3>
                 </div>
             </section>
