Touchup HTML CSS

--- a/index.html
+++ b/index.html
@@ -57,21 +57,46 @@
             <h2>My<br>Work</h2>
             <section class="work-content">
                 <!-- Clickable Work Examples -->
-                <div class="work-main">
-                    <h3>MERN Stack/Something1</h3>
-                </div>
-                <div class="work-other">
-                    <h3>Node/loT</h3>
-                </div>
-                <div class="work-other">
-                    <h3>React/JavaScript/CSS</h3>
-                </div>
-                <div class="work-other">
-                    <h3>MERN Stack/Something2</h3>
-                </div>
-                <div class="work-other">
-                    <h3>HTML/CSS</h3>
-                </div>
+                <a class="link-main" href="">
+                    <div id="work-pic-1" class="work-main">
+                        <div class="work-labels">
+                            <h3>Something Big!</h3>
+                            <h6>MERN Stack</h6>
+                        </div>
+                    </div>
+                </a>
+                <a class="link-other" href="">
+                    <div id="work-pic-2" class="work-other">
+                        <div class="work-labels">
+                            <h3>It's Coming!</h3>
+                            <h6>Node/loT</h6>
+                        </div>
+                    </div>
+                </a>
+                <a class="link-other" href="">
+                    <div id="work-pic-3" class="work-other">
+                        <div class="work-labels">
+                            <h3>Almost Here!</h3>
+                            <h6>React/JavaScript/CSS</h6>
+                        </div>
+                    </div>
+                </a>
+                <a class="link-other" href="">
+                    <div id="work-pic-4" class="work-other">
+                        <div class="work-labels">
+                            <h3>Don't Judge Me!</h3>
+                            <h6>MERN Stack</h6>
+                        </div>
+                    </div>
+                </a>
+                <a class="link-other" href="https://dolomiteson.github.io/run-buddy/">
+                    <div id="work-pic-5" class="work-other">
+                        <div class="work-labels">
+                            <h3>Run Buddy</h3>
+                            <h6>HTML/CSS</h6>
+                        </div>
+                    </div>
+                </a>
             </section>
         </section>
 
@@ -81,9 +106,9 @@
             <section>
                 <!-- Links-->
                 <ul>
-                    <li><strong>Phone: <a href = "tel:3147992248" >314.799.2248</a></strong></li>
-                    <li><strong>Email: <a href = "mailto: zimmerman.lucas@hotmail.com">zimmerman.lucas@hotmail.com</a></strong></li>
-                    <li><strong>Github: <a  href = "https://github.com/dolomiteson">dolomiteson</a></strong></li>
+                    <li><strong><a href = "tel:3147992248" >314.799.2248</a></strong></li>
+                    <li><strong><a href = "mailto: zimmerman.lucas@hotmail.com">zimmerman.lucas@hotmail.com</a></strong></li>
+                    <li><strong><a  href = "https://github.com/dolomiteson">dolomiteson</a></strong></li>
                 </ul>
             </section>
         </section>
